Use toList collector
returns unmodifiable list