@@ -23,7 +23,6 @@ import java.security.Principal;
 import java.util.Collections;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 
 import static org.cloudfoundry.identity.uaa.oauth.jwk.JsonWebKey.KeyType.RSA;
 
@@ -45,7 +44,7 @@ public class TokenKeyEndpoint {
     @RequestMapping(value = "/token_key", method = RequestMethod.GET)
     @ResponseBody
     public ResponseEntity<VerificationKeyResponse> getKey(Principal principal,
-            @RequestHeader(value = "If-None-Match", required = false, defaultValue = "NaN") String eTag) {
+                                                          @RequestHeader(value = "If-None-Match", required = false, defaultValue = "NaN") String eTag) {
         String lastModified = ((Long) IdentityZoneHolder.get().getLastModified().getTime()).toString();
         if (unmodifiedResource(eTag, lastModified)) {
             return new ResponseEntity<>(HttpStatus.NOT_MODIFIED);
@@ -60,7 +59,7 @@ public class TokenKeyEndpoint {
     @RequestMapping(value = "/token_keys", method = RequestMethod.GET)
     @ResponseBody
     public ResponseEntity<VerificationKeysListResponse> getKeys(Principal principal,
-            @RequestHeader(value = "If-None-Match", required = false, defaultValue = "NaN") String eTag) {
+                                                                @RequestHeader(value = "If-None-Match", required = false, defaultValue = "NaN") String eTag) {
         String lastModified = ((Long) IdentityZoneHolder.get().getLastModified().getTime()).toString();
         if (unmodifiedResource(eTag, lastModified)) {
             return new ResponseEntity<>(HttpStatus.NOT_MODIFIED);
@@ -114,7 +113,7 @@ public class TokenKeyEndpoint {
         List<VerificationKeyResponse> keyResponses = keys.values().stream()
                 .filter(k -> includeSymmetric || RSA.name().equals(k.type()))
                 .map(TokenKeyEndpoint::getVerificationKeyResponse)
-                .collect(Collectors.toList());
+                .toList();
         return new VerificationKeysListResponse(keyResponses);
     }
 
