@@ -2,12 +2,12 @@ package org.cloudfoundry.identity.uaa.oauth.beans;
 
 import org.apache.commons.lang3.ArrayUtils;
 import org.apache.commons.lang3.StringUtils;
-import org.cloudfoundry.identity.uaa.util.UaaUrlUtils;
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
 import org.cloudfoundry.identity.uaa.oauth.common.exceptions.OAuth2Exception;
 import org.cloudfoundry.identity.uaa.oauth.common.exceptions.RedirectMismatchException;
 import org.cloudfoundry.identity.uaa.oauth.provider.ClientDetails;
+import org.cloudfoundry.identity.uaa.util.UaaUrlUtils;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 import org.springframework.util.AntPathMatcher;
 import org.springframework.util.LinkedMultiValueMap;
 import org.springframework.util.MultiValueMap;
@@ -25,7 +25,6 @@ import java.util.regex.Pattern;
 
 import static java.util.Collections.emptySet;
 import static java.util.Optional.ofNullable;
-import static java.util.stream.Collectors.toList;
 import static java.util.stream.Collectors.toMap;
 import static org.cloudfoundry.identity.uaa.util.UaaUrlUtils.normalizeUri;
 import static org.springframework.util.StringUtils.isEmpty;
@@ -83,7 +82,7 @@ public class LegacyRedirectResolver extends org.cloudfoundry.identity.uaa.oauth.
 
         List<String> invalidUrls = registeredRedirectUris.stream()
                 .filter(url -> !UaaUrlUtils.isValidRegisteredRedirectUrl(url))
-                .collect(toList());
+                .toList();
 
         if (!invalidUrls.isEmpty()) {
             throw new RedirectMismatchException("Client registration contains invalid redirect_uri: " + invalidUrls);
@@ -151,7 +150,7 @@ public class LegacyRedirectResolver extends org.cloudfoundry.identity.uaa.oauth.
         MultiValueMap<String, String> originalParams = builder.build().getQueryParams();
         Map<String, List<String>> redactedParams = originalParams.entrySet()
                 .stream()
-                .map(e -> new SimpleEntry<>(e.getKey(), e.getValue().stream().map(v -> "REDACTED").collect(toList())))
+                .map(e -> new SimpleEntry<>(e.getKey(), e.getValue().stream().map(v -> "REDACTED").toList()))
                 .collect(toMap(Map.Entry::getKey, Map.Entry::getValue));
 
         builder.replaceQueryParams(new LinkedMultiValueMap<>(redactedParams));
