@@ -1,16 +1,19 @@
 package org.cloudfoundry.identity.uaa.ratelimiting.internal.limitertracking;
 
+import org.cloudfoundry.identity.uaa.ratelimiting.core.config.LimiterMapping;
+import org.junit.jupiter.api.Test;
+
 import java.time.Duration;
 import java.time.Instant;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.function.BiPredicate;
-import java.util.stream.Collectors;
 
-import org.cloudfoundry.identity.uaa.ratelimiting.core.config.LimiterMapping;
-import org.junit.jupiter.api.Test;
-
-import static org.junit.jupiter.api.Assertions.*;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertFalse;
+import static org.junit.jupiter.api.Assertions.assertNotNull;
+import static org.junit.jupiter.api.Assertions.assertNull;
+import static org.junit.jupiter.api.Assertions.assertTrue;
 
 class PathFragmentToLimiterMappingsTest {
 
@@ -19,7 +22,7 @@ class PathFragmentToLimiterMappingsTest {
 
     @Test
     void noLimiterMappings() {
-        mapper = new PathFragmentToLimiterMappings( String::contains );
+        mapper = new PathFragmentToLimiterMappings(String::contains);
 
         assertTrue(mapper.isEmpty());
         assertEquals(0, mapper.count());
@@ -34,7 +37,7 @@ class PathFragmentToLimiterMappingsTest {
         PathFragmentToLimiterMapping pebbles = pftp("Pebbles");
         PathFragmentToLimiterMapping wilma = pftp("Wilma");
 
-        mapper = new PathFragmentToLimiterMappings( String::contains, fred, pebbles, wilma );
+        mapper = new PathFragmentToLimiterMappings(String::contains, fred, pebbles, wilma);
 
         assertFalse(mapper.isEmpty());
         assertEquals(3, mapper.count());
@@ -51,7 +54,7 @@ class PathFragmentToLimiterMappingsTest {
             addTo(pftps, makePath('A', i));
             addTo(pftps, makePath('B', i));
         }
-        mapper = new PathFragmentToLimiterMappings( selector, pftps );
+        mapper = new PathFragmentToLimiterMappings(selector, pftps);
 
         assertEquals(2, check(false, "X"));
         assertEquals(50, check(false, makePath('X', 25)));
@@ -78,7 +81,7 @@ class PathFragmentToLimiterMappingsTest {
     }
 
     private static String makePath(char letter, int count) {
-        StringBuilder sb = new StringBuilder( count );
+        StringBuilder sb = new StringBuilder(count);
         while (0 < count--) {
             sb.append(letter);
         }
@@ -96,15 +99,15 @@ class PathFragmentToLimiterMappingsTest {
     }
 
     private static PathFragmentToLimiterMapping pftp(String pathFragmentAndName) {
-        return new PathFragmentToLimiterMapping( pathFragmentAndName,
+        return new PathFragmentToLimiterMapping(pathFragmentAndName,
                 LimiterMapping.builder()
                         .name(pathFragmentAndName)
                         .pathSelector("contains:" + pathFragmentAndName)
                         .global("1r/s")
-                        .build() );
+                        .build());
     }
 
     private List<PathFragmentToLimiterMapping> streamToPathFragments() {
-        return mapper.stream().collect(Collectors.toList());
+        return mapper.stream().toList();
     }
 }
