@@ -1,6 +1,6 @@
 /*
  * *****************************************************************************
- *     Cloud Foundry 
+ *     Cloud Foundry
  *     Copyright (c) [2009-2016] Pivotal Software, Inc. All Rights Reserved.
  *
  *     This product is licensed to you under the Apache License, Version 2.0 (the "License").
@@ -18,7 +18,6 @@ import org.springframework.context.ApplicationEvent;
 import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
-import java.util.stream.Collectors;
 
 public class TestApplicationEventHandler<T extends ApplicationEvent> {
     protected final List<T> events = new ArrayList<>();
@@ -38,7 +37,7 @@ public class TestApplicationEventHandler<T extends ApplicationEvent> {
 
     public <K extends T> K getLatestEventOfType(Class<K> type) {
         List<T> matchingEvents = events.stream()
-                .filter(event -> event.getClass().isAssignableFrom(type)).collect(Collectors.toList());
+                .filter(event -> event.getClass().isAssignableFrom(type)).toList();
         return (K) matchingEvents.get(matchingEvents.size() - 1); // safe cast because we checked that T isAssignableFrom K
     }
 
