@@ -21,6 +21,8 @@ import org.cloudfoundry.identity.uaa.constants.OriginKeys;
 import org.cloudfoundry.identity.uaa.mock.token.AbstractTokenMockMvcTests;
 import org.cloudfoundry.identity.uaa.mock.util.MockMvcUtils;
 import org.cloudfoundry.identity.uaa.oauth.UaaAuthorizationEndpoint;
+import org.cloudfoundry.identity.uaa.oauth.common.util.RandomValueStringGenerator;
+import org.cloudfoundry.identity.uaa.oauth.provider.ClientDetails;
 import org.cloudfoundry.identity.uaa.scim.ScimUser;
 import org.cloudfoundry.identity.uaa.zone.IdentityZone;
 import org.cloudfoundry.identity.uaa.zone.IdentityZoneHolder;
@@ -30,27 +32,27 @@ import org.junit.jupiter.api.Test;
 import org.springframework.mock.web.MockHttpSession;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.context.SecurityContextHolder;
-import org.cloudfoundry.identity.uaa.oauth.common.util.RandomValueStringGenerator;
-import org.cloudfoundry.identity.uaa.oauth.provider.ClientDetails;
 import org.springframework.security.web.context.HttpSessionSecurityContextRepository;
 import org.springframework.test.web.servlet.request.MockHttpServletRequestBuilder;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 import static org.cloudfoundry.identity.uaa.mock.util.MockMvcUtils.CookieCsrfPostProcessor.cookieCsrf;
-import static org.cloudfoundry.identity.uaa.oauth.token.TokenConstants.GRANT_TYPE_AUTHORIZATION_CODE;
-import static org.hamcrest.Matchers.containsString;
-import static org.junit.Assert.assertNotNull;
-import static org.junit.Assert.assertNull;
 import static org.cloudfoundry.identity.uaa.oauth.common.util.OAuth2Utils.CLIENT_ID;
 import static org.cloudfoundry.identity.uaa.oauth.common.util.OAuth2Utils.RESPONSE_TYPE;
 import static org.cloudfoundry.identity.uaa.oauth.common.util.OAuth2Utils.STATE;
 import static org.cloudfoundry.identity.uaa.oauth.common.util.OAuth2Utils.USER_OAUTH_APPROVAL;
+import static org.cloudfoundry.identity.uaa.oauth.token.TokenConstants.GRANT_TYPE_AUTHORIZATION_CODE;
+import static org.hamcrest.Matchers.containsString;
+import static org.junit.Assert.assertNotNull;
+import static org.junit.Assert.assertNull;
 import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.get;
 import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.post;
 import static org.springframework.test.web.servlet.result.MockMvcResultHandlers.print;
-import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.*;
+import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.content;
+import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.header;
+import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.redirectedUrlPattern;
+import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.status;
 
 public class ApprovalsMockMvcTests extends AbstractTokenMockMvcTests {
 
@@ -69,30 +71,25 @@ public class ApprovalsMockMvcTests extends AbstractTokenMockMvcTests {
     public void revoke() throws Exception {
         test_oauth_authorize_without_csrf();
         MockHttpSession session = getAuthenticatedSession(user1);
-        mockMvc.perform(
-                post("/profile")
+        mockMvc.perform(post("/profile")
                         .with(cookieCsrf())
                         .param("delete", "true")
                         .param("clientId", client1.getClientId())
-                        .session(session)
-        )
-        .andExpect(status().isFound())
+                        .session(session))
+                .andExpect(status().isFound())
                 .andExpect(header().string("Location", "profile"));
-
     }
 
     @Test
     public void revoke_invalid_client() throws Exception {
         test_oauth_authorize_without_csrf();
         MockHttpSession session = getAuthenticatedSession(user1);
-        mockMvc.perform(
-                post("/profile")
+        mockMvc.perform(post("/profile")
                         .with(cookieCsrf())
                         .param("delete", "true")
                         .param("clientId", "invalid_id")
-                        .session(session)
-        )
-        .andExpect(status().isFound())
+                        .session(session))
+                .andExpect(status().isFound())
                 .andExpect(header().string("Location", "profile?error_message_code=request.invalid_parameter"));
     }
 
@@ -101,57 +98,48 @@ public class ApprovalsMockMvcTests extends AbstractTokenMockMvcTests {
         String state = generator.generate();
 
         MockHttpSession session = getAuthenticatedSession(user1);
-        mockMvc.perform(
-                get("/oauth/authorize")
+        mockMvc.perform(get("/oauth/authorize")
                         .session(session)
                         .param(RESPONSE_TYPE, "code")
                         .param(STATE, state)
                         .param(CLIENT_ID, client1.getClientId()))
                 .andExpect(status().isOk()); //200 means the approvals page
 
-
         assertNotNull(session.getAttribute(UaaAuthorizationEndpoint.AUTHORIZATION_REQUEST));
         assertNotNull(session.getAttribute(UaaAuthorizationEndpoint.ORIGINAL_AUTHORIZATION_REQUEST));
 
         //no token
-        mockMvc.perform(
-                post("/oauth/authorize")
+        mockMvc.perform(post("/oauth/authorize")
                         .session(session)
                         .param(USER_OAUTH_APPROVAL, "true")
-                        .param("scope.0", "scope.test.scope1")
-        )
-        .andExpect(status().is4xxClientError());
+                        .param("scope.0", "scope.test.scope1"))
+                .andExpect(status().is4xxClientError());
 
         //invalid token
-        mockMvc.perform(
-                post("/oauth/authorize")
+        mockMvc.perform(post("/oauth/authorize")
                         .with(cookieCsrf().useInvalidToken())
                         .session(session)
                         .param(USER_OAUTH_APPROVAL, "true")
-                        .param("scope.0", "scope.test.scope1")
-        )
-        .andExpect(status().is4xxClientError());
+                        .param("scope.0", "scope.test.scope1"))
+                .andExpect(status().is4xxClientError());
 
         assertNotNull(session.getAttribute(UaaAuthorizationEndpoint.AUTHORIZATION_REQUEST));
         assertNotNull(session.getAttribute(UaaAuthorizationEndpoint.ORIGINAL_AUTHORIZATION_REQUEST));
 
         //valid token
-        mockMvc.perform(
-                post("/oauth/authorize")
+        mockMvc.perform(post("/oauth/authorize")
                         .with(cookieCsrf())
                         .session(session)
                         .param(USER_OAUTH_APPROVAL, "true")
                         .param("scope.0", "scope.test.scope1")
-                        .param("scope.1", "scope.test.scope2")
-        )
-        .andExpect(status().isFound())
+                        .param("scope.1", "scope.test.scope2"))
+                .andExpect(status().isFound())
                 .andExpect(redirectedUrlPattern("**/*code=*"));
 
         assertNull(session.getAttribute(UaaAuthorizationEndpoint.AUTHORIZATION_REQUEST));
         assertNull(session.getAttribute(UaaAuthorizationEndpoint.ORIGINAL_AUTHORIZATION_REQUEST));
 
-        mockMvc.perform(
-                get("/oauth/authorize")
+        mockMvc.perform(get("/oauth/authorize")
                         .session(session)
                         .param(RESPONSE_TYPE, "code")
                         .param(STATE, state)
@@ -164,27 +152,23 @@ public class ApprovalsMockMvcTests extends AbstractTokenMockMvcTests {
         String state = generator.generate();
 
         MockHttpSession session = getAuthenticatedSession(user1);
-        mockMvc.perform(
-                get("/oauth/authorize")
+        mockMvc.perform(get("/oauth/authorize")
                         .session(session)
                         .param(RESPONSE_TYPE, "code")
                         .param(STATE, state)
                         .param(CLIENT_ID, client1.getClientId()))
                 .andExpect(status().isOk()); //200 means the approvals page
 
-
         assertNotNull(session.getAttribute(UaaAuthorizationEndpoint.AUTHORIZATION_REQUEST));
         assertNotNull(session.getAttribute(UaaAuthorizationEndpoint.ORIGINAL_AUTHORIZATION_REQUEST));
 
-        mockMvc.perform(
-                post("/oauth/authorize")
+        mockMvc.perform(post("/oauth/authorize")
                         .with(cookieCsrf())
                         .session(session)
                         .param(USER_OAUTH_APPROVAL, "true")
                         .param("scope.0", "scope.different.scope")
-                        .param("scope.1", "scope.test.scope2")
-        )
-        .andDo(print())
+                        .param("scope.1", "scope.test.scope2"))
+                .andDo(print())
                 .andExpect(status().is3xxRedirection())
                 .andExpect(redirectedUrlPattern("http://test.example.org/redirect?error=invalid_scope&error_description=The%20requested%20scopes%20are%20invalid.%20Please%20use%20valid%20scope%20names%20in%20the%20request*"));
 
@@ -196,11 +180,9 @@ public class ApprovalsMockMvcTests extends AbstractTokenMockMvcTests {
     public void test_get_approvals() throws Exception {
         test_oauth_authorize_without_csrf();
         MockHttpSession session = getAuthenticatedSession(user1);
-        mockMvc.perform(
-                get("/profile")
-                        .session(session)
-        )
-        .andExpect(status().isOk())
+        mockMvc.perform(get("/profile")
+                        .session(session))
+                .andExpect(status().isOk())
                 .andExpect(content().string(containsString(client1.getClientId() + "-test.scope1")));
     }
 
@@ -211,25 +193,20 @@ public class ApprovalsMockMvcTests extends AbstractTokenMockMvcTests {
         MockHttpServletRequestBuilder post = post("/profile")
                 .session(session)
                 .param("checkScopes", client1.getClientId() + "-test.scope1", client1.getClientId() + "-test.scope2");
-        mockMvc.perform(
-                post
-        )
-        .andDo(print())
+        mockMvc.perform(post)
+                .andDo(print())
                 .andExpect(status().isForbidden());
 
-        mockMvc.perform(
-                post.with(cookieCsrf().useInvalidToken())
-        ).andExpect(status().isForbidden());
+        mockMvc.perform(post.with(cookieCsrf().useInvalidToken()))
+                .andExpect(status().isForbidden());
 
-        mockMvc.perform(
-                post.with(cookieCsrf())
-        )
-        .andExpect(status().isFound())
+        mockMvc.perform(post.with(cookieCsrf()))
+                .andExpect(status().isFound())
                 .andExpect(redirectedUrlPattern("**/profile"));
     }
 
     public MockHttpSession getAuthenticatedSession(ScimUser user) {
-        List<SimpleGrantedAuthority> authorities = user.getGroups().stream().map(g -> new SimpleGrantedAuthority(g.getValue())).collect(Collectors.toList());
+        List<SimpleGrantedAuthority> authorities = user.getGroups().stream().map(g -> new SimpleGrantedAuthority(g.getValue())).toList();
         UaaPrincipal p = new UaaPrincipal(user.getId(), user.getUserName(), user.getPrimaryEmail(), OriginKeys.UAA, "", IdentityZoneHolder.get().getId());
         UaaAuthentication auth = new UaaAuthentication(p, authorities, null);
         Assert.assertTrue(auth.isAuthenticated());
@@ -241,5 +218,4 @@ public class ApprovalsMockMvcTests extends AbstractTokenMockMvcTests {
         );
         return session;
     }
-
 }
