@@ -10,6 +10,7 @@ import org.cloudfoundry.identity.uaa.client.UaaClientDetails;
 import org.cloudfoundry.identity.uaa.constants.OriginKeys;
 import org.cloudfoundry.identity.uaa.mock.util.MockMvcUtils;
 import org.cloudfoundry.identity.uaa.mock.util.OAuthToken;
+import org.cloudfoundry.identity.uaa.oauth.common.util.RandomValueStringGenerator;
 import org.cloudfoundry.identity.uaa.resources.SearchResults;
 import org.cloudfoundry.identity.uaa.scim.ScimGroup;
 import org.cloudfoundry.identity.uaa.scim.ScimGroupExternalMember;
@@ -39,7 +40,6 @@ import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.MediaType;
 import org.springframework.jdbc.core.JdbcTemplate;
-import org.cloudfoundry.identity.uaa.oauth.common.util.RandomValueStringGenerator;
 import org.springframework.test.context.TestPropertySource;
 import org.springframework.test.web.servlet.MockMvc;
 import org.springframework.test.web.servlet.MvcResult;
@@ -181,27 +181,25 @@ public class ScimGroupEndpointsMockMvcTests {
 
         //try a regular scim token
         mockMvc.perform(post("/Groups/zones")
-                .accept(APPLICATION_JSON)
-                .contentType(APPLICATION_JSON)
-                .header("Authorization", "Bearer " + scimWriteToken)
-                .content(JsonUtils.writeValueAsBytes(group)))
+                        .accept(APPLICATION_JSON)
+                        .contentType(APPLICATION_JSON)
+                        .header("Authorization", "Bearer " + scimWriteToken)
+                        .content(JsonUtils.writeValueAsBytes(group)))
                 .andExpect(status().isForbidden());
 
-        mockMvc.perform(
-                delete("/Groups/zones/{userId}/{zoneId}", scimUser.getId(), zone.getId())
+        mockMvc.perform(delete("/Groups/zones/{userId}/{zoneId}", scimUser.getId(), zone.getId())
                         .header("Authorization", "Bearer " + scimWriteToken))
                 .andExpect(status().isForbidden());
 
-        mockMvc.perform(
-                delete("/Groups/zones/{userId}/{zoneId}", "nonexistent", zone.getId())
+        mockMvc.perform(delete("/Groups/zones/{userId}/{zoneId}", "nonexistent", zone.getId())
                         .header("Authorization", "Bearer " + identityClientToken))
                 .andExpect(status().isNotFound());
 
         mockMvc.perform(post("/Groups/zones")
-                .accept(APPLICATION_JSON)
-                .contentType(APPLICATION_JSON)
-                .header("Authorization", "Bearer " + identityClientToken)
-                .content(""))
+                        .accept(APPLICATION_JSON)
+                        .contentType(APPLICATION_JSON)
+                        .header("Authorization", "Bearer " + identityClientToken)
+                        .content(""))
                 .andExpect(status().isBadRequest());
 
         //add two users to the same zone
@@ -420,19 +418,19 @@ public class ScimGroupEndpointsMockMvcTests {
             ScimGroup group2 = new ScimGroup(null, "another.group", result.getIdentityZone().getId());
 
             mockMvc.perform(post("/Groups")
-                    .header(IdentityZoneSwitchingFilter.HEADER, result.getIdentityZone().getId())
-                    .header("Authorization", "bearer " + result.getZoneAdminToken())
-                    .accept(APPLICATION_JSON)
-                    .contentType(APPLICATION_JSON)
-                    .content(JsonUtils.writeValueAsString(group1)))
+                            .header(IdentityZoneSwitchingFilter.HEADER, result.getIdentityZone().getId())
+                            .header("Authorization", "bearer " + result.getZoneAdminToken())
+                            .accept(APPLICATION_JSON)
+                            .contentType(APPLICATION_JSON)
+                            .content(JsonUtils.writeValueAsString(group1)))
                     .andExpect(status().isCreated());
 
             mockMvc.perform(post("/Groups")
-                    .header(IdentityZoneSwitchingFilter.HEADER, result.getIdentityZone().getId())
-                    .header("Authorization", "bearer " + result.getZoneAdminToken())
-                    .accept(APPLICATION_JSON)
-                    .contentType(APPLICATION_JSON)
-                    .content(JsonUtils.writeValueAsString(group2)))
+                            .header(IdentityZoneSwitchingFilter.HEADER, result.getIdentityZone().getId())
+                            .header("Authorization", "bearer " + result.getZoneAdminToken())
+                            .accept(APPLICATION_JSON)
+                            .contentType(APPLICATION_JSON)
+                            .content(JsonUtils.writeValueAsString(group2)))
                     .andExpect(status().isCreated());
 
             MockHttpServletRequestBuilder get = get("/Groups")
@@ -528,7 +526,9 @@ public class ScimGroupEndpointsMockMvcTests {
     List<String> getSystemScopes(String containing) {
         List<String> systemScopes = ZoneManagementScopes.getSystemScopes();
         if (hasText(containing)) {
-            return systemScopes.stream().filter(s -> s.contains(containing)).collect(Collectors.toList());
+            return systemScopes.stream()
+                    .filter(s -> s.contains(containing))
+                    .toList();
         } else {
             return systemScopes;
         }
@@ -1070,15 +1070,15 @@ public class ScimGroupEndpointsMockMvcTests {
         String groupId = getGroupId("scim.read");
         ScimGroupMember scimGroupMember = new ScimGroupMember(user.getId(), ScimGroupMember.Type.USER);
         mockMvc.perform(post("/Groups/" + groupId + "/members")
-                .header("Authorization", "Bearer " + scimWriteToken)
-                .header("Content-Type", APPLICATION_JSON_VALUE)
-                .content(JsonUtils.writeValueAsString(scimGroupMember)))
+                        .header("Authorization", "Bearer " + scimWriteToken)
+                        .header("Content-Type", APPLICATION_JSON_VALUE)
+                        .content(JsonUtils.writeValueAsString(scimGroupMember)))
                 .andExpect(status().isCreated());
 
         mockMvc.perform(post("/Groups/" + groupId + "/members")
-                .header("Authorization", "Bearer " + scimWriteToken)
-                .header("Content-Type", APPLICATION_JSON_VALUE)
-                .content(JsonUtils.writeValueAsString(scimGroupMember)))
+                        .header("Authorization", "Bearer " + scimWriteToken)
+                        .header("Content-Type", APPLICATION_JSON_VALUE)
+                        .content(JsonUtils.writeValueAsString(scimGroupMember)))
                 .andExpect(status().isConflict());
     }
 
@@ -1088,8 +1088,8 @@ public class ScimGroupEndpointsMockMvcTests {
         String groupId = getGroupId("scim.read");
 
         String deleteResponseBody = mockMvc.perform(delete("/Groups/" + groupId + "/members/" + user.getId())
-                .header("Authorization", "Bearer " + scimWriteToken)
-                .header("Content-Type", APPLICATION_JSON_VALUE))
+                        .header("Authorization", "Bearer " + scimWriteToken)
+                        .header("Content-Type", APPLICATION_JSON_VALUE))
                 .andExpect(status().isOk()).andReturn().getResponse().getContentAsString();
 
         ScimGroupMember deletedMember = JsonUtils.readValue(deleteResponseBody, ScimGroupMember.class);
@@ -1102,8 +1102,8 @@ public class ScimGroupEndpointsMockMvcTests {
         ScimUser user = createUserAndAddToGroups(IdentityZone.getUaa(), Collections.singleton("scim.read"));
 
         mockMvc.perform(delete("/Groups/nonexistent-group/members/" + user.getId())
-                .header("Authorization", "Bearer " + scimWriteToken)
-                .header("Content-Type", APPLICATION_JSON_VALUE))
+                        .header("Authorization", "Bearer " + scimWriteToken)
+                        .header("Content-Type", APPLICATION_JSON_VALUE))
                 .andExpect(status().isNotFound());
     }
 
@@ -1111,27 +1111,25 @@ public class ScimGroupEndpointsMockMvcTests {
     void delete_user_not_member_of_group() throws Exception {
         String groupId = getGroupId("acme");
         mockMvc.perform(delete("/Groups/" + groupId + "/members/" + scimUser.getId())
-                .header("Authorization", "Bearer " + scimWriteToken)
-                .header("Content-Type", APPLICATION_JSON_VALUE))
+                        .header("Authorization", "Bearer " + scimWriteToken)
+                        .header("Content-Type", APPLICATION_JSON_VALUE))
                 .andExpect(status().isNotFound());
     }
 
     @Test
     void delete_nonexistent_user() throws Exception {
         mockMvc.perform(delete("/Groups/nonexistent-group/members/non-existent-user")
-                .header("Authorization", "Bearer " + scimWriteToken)
-                .header("Content-Type", APPLICATION_JSON_VALUE))
+                        .header("Authorization", "Bearer " + scimWriteToken)
+                        .header("Content-Type", APPLICATION_JSON_VALUE))
                 .andExpect(status().isNotFound());
     }
 
     @Test
     void patch_has_one_path() throws Exception {
-        mockMvc.perform(
-                patch("/Group/groupId/members")
+        mockMvc.perform(patch("/Group/groupId/members")
                         .header("Authorization", "Bearer " + scimWriteToken)
-                        .header("Content-Type", APPLICATION_JSON_VALUE)
-        )
-        .andDo(print())
+                        .header("Content-Type", APPLICATION_JSON_VALUE))
+                .andDo(print())
                 .andExpect(header().string("Location", "http://localhost/login?error=invalid_login_request"))
                 .andExpect(status().isFound()); //gets caught by the ui filter for unknown URIs but wantsJson;
     }
@@ -1150,7 +1148,6 @@ public class ScimGroupEndpointsMockMvcTests {
                 .content(JsonUtils.writeValueAsString(scimGroupMember));
         mockMvc.perform(post)
                 .andExpect(status().isForbidden());
-
     }
 
     @Test
@@ -1278,7 +1275,9 @@ public class ScimGroupEndpointsMockMvcTests {
             pages.add(page);
         }
 
-        List<ScimGroupExternalMember> members = pages.stream().flatMap(p -> p.getResources().stream()).collect(Collectors.toList());
+        List<ScimGroupExternalMember> members = pages.stream()
+                .flatMap(p -> p.getResources().stream())
+                .toList();
 
         validateDbMembers(databaseExternalMembers, members);
     }
@@ -1453,5 +1452,4 @@ public class ScimGroupEndpointsMockMvcTests {
         }
         return newGroup;
     }
-
 }
